--- a/seattle-vr.html
+++ b/seattle-vr.html
@@ -36,10 +36,10 @@
   </div>-->
 
   <a-scene>
-    <!--Text not working on VR headset -->
+    <!--Text not working on VR headset 
     <div class="fact-text">
       <p>You've learned <span id="facts"> </span> / 3 facts about The Waterfront.</p>
-    </div>
+    </div>-->
   
     <a-sky src="qqq.jpg" rotation="0 -130 0"></a-sky>
 
